# time-engine

./: .gitignore  Cargo.toml  build-wasm.sh  rust-toolchain.toml
public/: index.html
time-engine/: Cargo.toml
time-engine/src/: conversions.rs  delta_graph.rs  immutable_util.rs  lib.rs  physics_utils.rs  polygon_utils.rs  rle_vec.rs  simulation.rs  stream_id.rs  time_range.rs  timeline_id.rs  uid.rs  world_state.rs
time-engine/src/conversions/: tofrom.rs
time-engine/src/simulation/: result.rs  simulator.rs  snapgraph.rs  snapshots.rs  timestamp.rs  timestamp_graph.rs
visualisation/: Cargo.toml
visualisation/src/: draw_polygon.rs  main.rs  scenes.rs  simulation_renderer.rs  timeline_controls.rs
