[package]
name = "time-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
arbitrary-int = { version = "1.3.0", features = ["std"] }
glam = "0.27.0"
i_overlay = { version = "4.0.2", features = ["glam"] }
i_triangle = { version = "0.35.0", features = ["glam"] }
itertools = "0.14.0"
nalgebra = "0.33.2"
ordered-float = "5.0.0"
parking_lot = "0.12.4"
parry2d = "0.21.1"
tinyvec = { version = "1.9.0", features = ["std", "alloc"] }
